vendor/proc-macro-error-1.0.4/tests/ui/unknown_setting.stderr
error: unknown setting `trololo`, expected one of `assert_unwind_safe`, `allow_not_macro`, `proc_macro_hack`
 --> $DIR/unknown_setting.rs:3:57
  |
3 | #[proc_macro_error(allow_not_macro, assert_unwind_safe, trololo)]
  |                                                         ^^^^^^^
